Tests/errors/malformedDef.scisl
def cool
	print "Nothing"

call cool